--- a/plots.ipynb
+++ b/plots.ipynb
@@ -153,7 +153,7 @@
     "          xlim=(20, 5000), xscale='log', xformatter='scalar',\n",
     "          title=f'{benchmark.title()} benchmark')\n",
     "f.bpanel.legend(hs, ncols=2, order='F')\n",
-    "f.save('fluxes.pdf')"
+    "f.save('fluxes.png')"
    ]
   }
  ],
