--- a/plots.ipynb
+++ b/plots.ipynb
@@ -33,10 +33,8 @@
     "    if regex:\n",
     "        num, size = regex.groups()\n",
     "        mult = 1\n",
-    "        if size and size in 'kK': # note if did not have suffix, 'size' will be None!\n",
-    "            mult = 1e-3\n",
-    "        elif size and size in 'gG':\n",
-    "            mult = 1e3\n",
+    "        if size:\n",
+    "            mult = {'k':1e-3, 'g':1e3}.get(size.lower(), 1)\n",
     "        cell = float(num)*mult\n",
     "    return cell or None # replace empty string with None\n",
     "tables = [[[sanitize(cell) for cell in row.split('|')[1:-1]] for row in table.strip().split('\\n')[2:]]\n",
