--- a/plots.ipynb
+++ b/plots.ipynb
@@ -121,6 +121,7 @@
     "    for ivec,table in zip(vec,tables):\n",
     "        if any(ivec!=jvec for jvec in [row[i] for row in table]):\n",
     "            raise ValueError('Inconsistent tables.')\n",
+    "            \n",
     "# Plot data\n",
     "plot.rc.cycle = 'colorblind10'\n",
     "f, axs = plot.subplots(axwidth=2.5, ncols=2, aspect=(2,3), legend='b', span=False, share=1)\n",
@@ -149,7 +150,33 @@
     "              xlim=(20, 4400), xscale=scale, xformatter='scalar',\n",
     "              title=f'{scale.title()} scale', suptitle=f'{benchmark.title()} benchmark')\n",
     "f.bpanel.legend(hs, ncols=3, order='F')\n",
-    "f.save('fluxes.png')"
+    "f.save('fluxes.png')\n",
+    "\n",
+    "# Plot relative comparison\n",
+    "inco, = np.where(np.array([cat.lower() for cat in cats])=='nco')\n",
+    "inco = inco[0]\n",
+    "f, ax = plot.subplots(axwidth=2.5, aspect=(2,3), legend='b', span=False, share=1)\n",
+    "hs = []\n",
+    "ic, xc = 0, 0 # make xarray lines different shades of same color\n",
+    "ref = np.array([table[inco][3] for table in tables])\n",
+    "for i in idxs:\n",
+    "    if i==inco:\n",
+    "        continue\n",
+    "    cat = cats[i]\n",
+    "    if 'xarray' in cat.lower():\n",
+    "        color = xcolors[xc]\n",
+    "        xc += 1\n",
+    "    else:\n",
+    "        # color = f'C{ic}'\n",
+    "        color = ocolors[ic]\n",
+    "        ic += 1\n",
+    "    times = [table[i][3] for table in tables] # 4th cell contains 'real' time\n",
+    "    hs += ax.plot(sizes, np.array(times)/ref, color=color, marker='o', markersize=6, label=cat, lw=1)\n",
+    "ax.format(xlabel='file size (MB)', ylabel='ratio', gridminor=True,\n",
+    "          ylim=(0.1, 3), yscale='log', yformatter='scalar',\n",
+    "          xlim=(20, 4400), xscale='log', xformatter='scalar',\n",
+    "          suptitle=f'{benchmark.title()} benchmark relative to NCO')\n",
+    "f.bpanel.legend(hs, order='F')"
    ]
   }
  ],
