Readme and plots

--- a/plots.ipynb
+++ b/plots.ipynb
@@ -35,14 +35,15 @@
     "            mult = {'k':1e-3, 'g':1e3}.get(size.lower(), 1)\n",
     "        cell = float(num)*mult\n",
     "    return cell or None # replace empty string with None\n",
-    "def runtimes(name, dir_):\n",
-    "    file = f'logs/{name}_{dir_}_uriah.log'\n",
+    "def runtimes(name, dir_, server='uriah'):\n",
+    "    file = f'logs/{name}_{dir_}_{server}.log'\n",
     "    with open(file, 'r') as f:\n",
     "        data = f.read()\n",
     "    # Tables are formatted with leading and trailing columns divisors '|', ignore these; also ignore\n",
     "    # trailing spaces and italics or bold asterisks in each cell, and the 2 header rows\n",
     "    tables = [[[sanitize(cell) for cell in row.split('|')[1:-1]] for row in table.strip().split('\\n')[2:]]\n",
     "              for table in data.split('\\n\\n') if table] # ignore \"empty\" tables, i.e. extra newlines\n",
+    "    # print(tables)\n",
     "    # Check tables\n",
     "    # Change this as table format changes!\n",
     "    cats = [row[2] for row in tables[0]]\n",
@@ -65,10 +66,11 @@
    "outputs": [],
    "source": [
     "# We still want markdown tables so user can look at stuff in more detail!\n",
-    "def benchmark(name, dir_):\n",
+    "def benchmark(name, dir_, ncols=3, ymin=0.1, ymax=50, server='uriah'):\n",
     "    # Plot data\n",
-    "    cats, nlats, sizes, tables = runtimes(name, dir_)\n",
+    "    cats, nlats, sizes, tables = runtimes(name, dir_, server=server)\n",
     "    plot.rc.cycle = 'colorblind10'\n",
+    "    server = {'uriah':'macbook', 'cheyenne4':'supercomputer', 'monde':'server'}.get(server, server)\n",
     "    f, axs = plot.subplots(axwidth=2.5, ncols=2, aspect=(2,3), legend='b', span=False, share=1)\n",
     "    nxarray = len([cat for cat in cats if 'xarray' in cat.lower()])\n",
     "    xcolors = plot.colors('greys', nxarray, left=0.3)\n",
@@ -91,10 +93,10 @@
     "            # hs += [ax.scatter(sizes, times, color=[color], label=cat)]\n",
     "        ax.format(xlabel='file size (MB)', ylabel='time (seconds)', gridminor=True,\n",
     "        # ax.format(xlabel='latitude count', ylabel='time (seconds)',\n",
-    "                  ylim=(0,50) if scale=='linear' else (0.2, 80), yscale=scale, yformatter='scalar',\n",
+    "                  ylim=(0, ymax) if scale=='linear' else (ymin, ymax), yscale=scale, yformatter='scalar',\n",
     "                  xlim=(min(sizes), max(sizes)), xscale=scale, xformatter='scalar',\n",
-    "                  title=f'{scale.title()} scale', suptitle=f'{name.title()} benchmark')\n",
-    "    f.bpanel.legend(hs, ncols=3, order='F')\n",
+    "                  title=f'{scale.title()} scale', suptitle=f'{name.title()} benchmark on {server}')\n",
+    "    f.bpanel.legend(hs, ncols=ncols, order='F')\n",
     "    return f"
    ]
   },
@@ -147,8 +149,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = benchmark('fluxes', '60lev')\n",
+    "f = benchmark('fluxes', '60lev', ymin=0.4, server='uriah')\n",
     "# f.save('fluxes.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = benchmark('fluxes', '60lev', ncols=2, ymin=0.4, ymax=100, server='cheyenne4')\n",
+    "f.save('fluxes_cheyenne.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = benchmark('slice', '60lev', ymin=0.1, ymax=10, server='uriah')\n",
+    "f.save('slice.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = benchmark('isentropes', '60lev', ncols=4, ymin=0.4, ymax=12, server='uriah')\n",
+    "f.save('isentropes.png')"
    ]
   }
  ],
