--- a/plots.ipynb
+++ b/plots.ipynb
@@ -150,7 +150,7 @@
    "outputs": [],
    "source": [
     "f = benchmark('fluxes', '60lev', ymin=0.4, server='uriah')\n",
-    "# f.save('fluxes.png')"
+    "f.save('fluxes_macbook.png')"
    ]
   },
   {
