--- a/plots.ipynb
+++ b/plots.ipynb
@@ -97,15 +97,8 @@
     "                  xlim=(min(sizes), max(sizes)), xscale=scale, xformatter='scalar',\n",
     "                  title=f'{scale.title()} scale', suptitle=f'{name.title()} benchmark on {server}')\n",
     "    f.bpanel.legend(hs, ncols=ncols, order='F')\n",
-    "    return f"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return f\n",
+    "\n",
     "def relative(name, dir_):\n",
     "    # Plot relative comparison\n",
     "    cats, nlats, sizes, tables = runtimes(name, dir_)\n",
@@ -169,8 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = benchmark('slice', '60lev', ymin=0.1, ymax=10, server='uriah')\n",
-    "f.save('slice.png')"
+    "f = benchmark('slice', '60lev', ymin=0.05, ymax=5, server='uriah')"
    ]
   },
   {
