--- a/plots.ipynb
+++ b/plots.ipynb
@@ -162,7 +162,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = benchmark('slice', '60lev', ymin=0.05, ymax=5, server='uriah')"
+    "f = benchmark('slice', '60lev', ymin=0.05, ymax=5, server='uriah')\n",
+    "f.save('slice.png')"
    ]
   },
   {
