--- a/plots.ipynb
+++ b/plots.ipynb
@@ -162,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = benchmark('slice', '60lev', ymin=0.05, ymax=5, server='uriah')\n",
+    "f = benchmark('slice', '60lev', ncols=4, ymin=0.05, ymax=8, server='uriah')\n",
     "f.save('slice.png')"
    ]
   },
